--- a/analytics/insights/templates/mails/insight.html
+++ b/analytics/insights/templates/mails/insight.html
@@ -26,7 +26,7 @@
 <body>
     <div class="content">
         <h1>Product Insight</h1>
-        <p> {{ message }} </p>
+        <p> {{ insight }} </p>
         <img src="{{ product.image_url }}" alt="Product Image" style="max-width: 400px; margin: 20px auto; display: block;">
         <a href="{{ product.item_web_url }}">Visit Product Website</a>
     </div>
