Fix broken Web URL and typo in the subject line for insights email

--- a/analytics/insights/templates/mails/insight.html
+++ b/analytics/insights/templates/mails/insight.html
@@ -28,7 +28,7 @@
         <h1>Product Insight</h1>
         <p> {{ insight }} </p>
         <img src="{{ product.image_url }}" alt="Product Image" style="max-width: 400px; margin: 20px auto; display: block;">
-        <a href="{{ product.item_web_url }}">Visit Product Website</a>
+        <a href="{{ product.web_url }}">Visit Product Website</a>
     </div>
 </body>
 </html>
